--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -92,7 +92,7 @@
       </div>
       <div class="modal-right">
         <img
-          src="https://images.unsplash.com/photo-1512486130939-2c4f79935e4f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dfd2ec5a01006fd8c4d7592a381d3776&auto=format&fit=crop&w=1000&q=80"
+          src="../assets/login-img.png"
           alt="">
       </div>
       <button class="icon-button close-button" (click)="closeModal()">
