left message color change

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -126,7 +126,7 @@ img {
 
 .message-feed:not(.right) .mf-content {
   // color: #fff;
-  background: #b7e5c5;
+  background: lightgray;
   box-shadow: 7px 6px 15px -4px gray;
   // box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
